Progressive Web App

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
-    "name": "Score-Counter",
-    "short_name": "Score-counter",
-    "description": "Compteur de points",
-    "icons": [
-      {
-        "src": "/images/icon-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/images/icon-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ],
-    "display": "standalone"
-  }
+  "name": "Score-Counter",
+  "short_name": "Score-counter",
+  "description": "Compteur de points",
+  "start_url": "index.html",
+  "icons": [
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "display": "standalone"
+}
